# ipython-cells

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
ipython_cells/: __init__.py  ipython_cells.py
tests/: example.py  example_edited.py  tests.py
